Fix footer/affixed sidebar overlap bug

--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -114,6 +114,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // PAGE FOOTER
 footer {
+  position: relative;
   z-index: 1;
   background-color: #000;
   width: 100%;
